--- a/proj.html
+++ b/proj.html
@@ -40,6 +40,10 @@
         </div>
       </div>
 
+      <div class="row" id="third-row">
+        <div id="timeline"></div>
+      </div>
+
 
       
     </div>
