--- a/proj.html
+++ b/proj.html
@@ -18,7 +18,7 @@
 
       <div class="row" id="first-row">
         <div class="col-4" id="col1">
-          
+          <div id="treemap"></div>
         </div>
         <div class="col-4" id="col2">
           
