Start linechart implementation

--- a/proj.html
+++ b/proj.html
@@ -21,7 +21,7 @@
           <div id="treemap"></div>
         </div>
         <div class="col-4" id="col2">
-          
+          <div id="linechart"></div>
         </div>
         <div class="col-4" id="col3">
           <div id="sale-title"></div>
