--- a/proj.html
+++ b/proj.html
@@ -30,13 +30,13 @@
 
       <div class="row" id="second-row">
         <div class="col-4" id="col4">
-          
+          <div id="radarchart1"></div>
         </div>
         <div class="col-4" id="col5">
           <div id="heatmap" style="text-align:center;"></div>
         </div>
         <div class="col-4" id="col6">
-          
+          <div id="radarchart2"></div>
         </div>
       </div>
 
