some more transitions and title

--- a/proj.html
+++ b/proj.html
@@ -16,7 +16,10 @@
 
     <div class="container">
 
-      <div class="row" id="first-row">
+		<div class="row" id="title">
+		How movies sales influence games sales
+      </div>
+	  <div class="row" id="first-row">
         <div class="col-4" id="col1">
           <div id="treemap"></div>
         </div>
