Barchart fixed, legends changed, heatmap color scale

--- a/proj.html
+++ b/proj.html
@@ -17,7 +17,7 @@
     <div class="container">
 
 		<div class="row" id="title">
-		How movies sales influence games sales
+		Movie sales influence on game sales
       </div>
 	  <div class="row" id="first-row">
         <div class="col-4" id="col1">
