--- a/proj.html
+++ b/proj.html
@@ -16,8 +16,8 @@
 
     <div class="container">
 
-		<div class="row" id="title">
-		Movie sales influence on game sales
+		<div class="row" id="title" style="text-align:center;"> 
+		How do movie and videogame sales behave?
       </div>
 	  <div class="row" id="first-row">
         <div class="col-4" id="col1">
