Almost final visuals, heatmap drag, barchart color

--- a/proj.html
+++ b/proj.html
@@ -16,7 +16,7 @@
 
     <div class="container">
 
-		<div class="row" id="title" style="text-align:center;"> 
+		<div class="row" id="title"> 
 		How do movie and videogame sales behave?
       </div>
 	  <div class="row" id="first-row">
@@ -36,7 +36,7 @@
           <div id="radarchart1"></div>
         </div>
         <div class="col-4" id="col5">
-          <div id="heatmap" style="text-align:center;"></div>
+          <div id="heatmap"></div>
         </div>
         <div class="col-4" id="col6">
           <div id="radarchart2"></div>
